# envctl

./: .gitignore  .mcp.json  CLAUDE.md  CONFLICTS.md  Cargo.toml  HANDOFF.md  README.md  kasetto.yaml  rust-toolchain.toml
.agents/skills/envctl/: SKILL.md
.claude/: ecc-tools.json  identity.json  settings.json
.claude/agents/: build-health-auditor.md  continuity-steward.md  evolution-steward.md  feature-architect.md  handoff-kernel-engineer.md  invariant-guardian.md  rust-implementer.md  rust-port-architect.md  rust-port-cartographer.md  rust-port-cross-repo-referencer.md  rust-port-merge-integrator.md  rust-port-parity-verifier.md  rust-port-porter.md  rust-port-researcher.md
.claude/hooks/: hf-checkpoint.sh
.claude/skills/agent-env-config/: SKILL.md
.claude/skills/auto-provision/: SKILL.md
.claude/skills/cross-repo-health/: SKILL.md
.claude/skills/cross-repo-reference/: SKILL.md
.claude/skills/env-install-loop/: SKILL.md
.claude/skills/env-stabilize/: SKILL.md
.claude/skills/feature-forge/: SKILL.md
.claude/skills/forge-loop/: SKILL.md
.claude/skills/handoff-sync/: SKILL.md
.claude/skills/harness-evolution/: SKILL.md
.claude/skills/harness-loop-init/: SKILL.md
.claude/skills/icm-memory/: SKILL.md
.claude/skills/rust-feature-impl/: SKILL.md
.claude/skills/rust-port/: SKILL.md
.claude/skills/rust-port-inventory/: SKILL.md
.claude/skills/rust-port-merge/: SKILL.md
.claude/skills/rust-port-parity/: SKILL.md
.claude/skills/rust-port-translate/: SKILL.md
.claude/skills/session-relay/: SKILL.md
.claude/skills/session-relay-resume/: SKILL.md
.claude/skills/session-relay-wrap-up/: SKILL.md
.codex/: AGENTS.md  config.toml
.forge/: invariants.toml
.github/workflows/: ci.yml  sync-develop-to-master.yml  sync-master.yml
.handoff/: README.md
.handoff/context/: capsule.json
.handoff/decisions/: ADR-0001-kasetto-handoff-portability-unification.md  FINDING-0002-hf-ledger-residency-vs-repo-tier-a.md
.handoff/hooks/: hooks.toml
.handoff/loop/: HANDOFF.md  backlog.md  loop_state.md
.handoff/packets/: latest.md
.handoff/policies/: rules.toml
.handoff/skills/: session-resume.skill.md
_workspace/: 01_architect_plan.md  02_implementer_log.md  03_guardian_report.md  HANDOFF.md  backlog.md  brief-grit-harness-parallel.md  brief-node-via-bun.md  loop_state.md  n8n-live-smoke-runbook.md
_workspace_prev/: loop_state.md
_workspace_prev/_workspace/: 01_architect_plan.md  02_implementer_log.md
agent-skills/env-toolchain-install/: SKILL.md
agent-skills/mcps/: n8n-mcp.json
assets/scripts/: HANDOFF.md  README.md  autoinstall.yaml  envctl-dashboard-pane  envctl-open-claude  ubuntu-boot-repair.sh  yazelix-config.sh  yazelix-gpu-verify-install.sh  yazelix-setup.sh
ci/gates/: enable.sh  no-c.sh  p7.sh  shape.sh
crates/agent-env/: Cargo.toml
crates/agent-env/src/: agent.rs  command.rs  config.rs  config_edit.rs  config_path.rs  dirs.rs  driver.rs  extend.rs  fsops.rs  hash.rs  lib.rs  lock.rs  mcp.rs  profile.rs  report.rs  runtime.rs  source.rs  sync.rs  util.rs
crates/agent-env/tests/: no_downgrade.rs  parity_vs_kasetto.rs
crates/cli/: Cargo.toml
crates/engine/: Cargo.toml
crates/engine/src/: addrepo.rs  command.rs  component.rs  dashboard.rs  detect.rs  detect_build.rs  drift.rs  error.rs  event.rs  executor.rs  graph.rs  guard.rs  install.rs  lib.rs  lock.rs  model.rs  register.rs  runner.rs  runtime.rs  telemetry.rs  wiring.rs
crates/engine/src/agent/: clean.rs  edit.rs  list.rs  lock.rs  mod.rs  report.rs  sync.rs
crates/engine/tests/: agent_command_parity.rs  agent_sync.rs  agent_sync_parity.rs  engine.rs
crates/engine/tests/fixtures/agent/cmdpack/commands/: foo.md
crates/engine/tests/fixtures/agent/cmdpack/commands/git/: commit.md
crates/engine/tests/fixtures/agent/pack/alpha/: SKILL.md
crates/engine/tests/fixtures/agent/pack/beta/: SKILL.md
crates/engine/tests/fixtures/agent/pack/mcps/: servers.json
crates/engine/tests/golden/: mission-control.kdl
crates/gui/: Cargo.toml
crates/gui/src/: main.rs  theme.rs
crates/secretctl/: Cargo.toml
crates/secretctl/src/: cli.rs  main.rs  render.rs
crates/secretd/: Cargo.toml
crates/secretd/src/: audit.rs  config.rs  conv.rs  grpc.rs  lib.rs  main.rs  peercred.rs  proxy.rs  server.rs
crates/secretd/tests/: e2e.rs  libsql_e2e.rs  mitm_e2e.rs  proxy_swap_e2e.rs  self_check.rs
crates/secrets-engine/: Cargo.toml
crates/secrets-engine/examples/: seed_factor_probe.rs
crates/secrets-engine/src/: ca.rs  error.rs  event.rs  guard.rs  inject.rs  keyslot.rs  lib.rs  mint_github.rs  paths.rs  seam.rs
crates/secrets-engine/src/broker/: adapter.rs  decide.rs  gate.rs  mod.rs  policy.rs  token.rs
crates/secrets-engine/src/vault/: aad.rs  audit.rs  crypto.rs  mod.rs  store.rs
crates/secrets-engine/tests/: inject.rs  phase0.rs  relay.rs  vault.rs
crates/secrets-proto/: Cargo.toml  build.rs
crates/secrets-proto/proto/: control.proto
crates/secrets-proto/src/: lib.rs
crates/secrets-store-libsql/: Cargo.toml  README.md
crates/secrets-store-libsql/src/: error.rs  health.rs  lib.rs  schema.rs  serial.rs  store.rs  sync.rs  tests.rs
crates/secrets-store-libsql/tests/: integration_remote.rs
docs/: ADD-REPO.md  ARCHITECTURE.md  DESIGN-NOTES.md  HANDOFF-kasetto-env-and-phase8.md  KASETTO-FEATURES.md  PRD.md  ROADMAP.md  THREAT-MODEL.md  adr-meta-tool-location-and-portability.md  adr-seed-usb-possession-factor.md
docs/ops/: 02-envctl-component.md  08-secretd-store-config.md
docs/secrets/: ARCHITECTURE.md  AUTO-INJECT-STATUS.md  CHARTER.md  DESIGN-NOTES.md  README.md  ROADMAP.md  SCAFFOLD-SPEC.md  SERVER-MODE.md  THREAT-MODEL.md
home/: .gitconfig  README.md
home/.claude/: CLAUDE.md  settings.json  settings.json.tmpl
manifest/: agent-env.toml  ai-clis.toml  apt-base.toml  base.toml  boot-repair.toml  dashboard.toml  desktop-app.toml  dev-tools.toml  env-ctl.toml  gpu.toml  grit.toml  n8n-mcp.toml  nix-yazelix.toml  sqld.toml
manifest/components.d/: portability-links.toml
packaging/: envctl-gui.desktop  install-desktop.sh
(+72 files in other folders)
