[workspace]
resolver = "2"
members = ["crates/engine", "crates/cli", "crates/gui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.135"
toml = "0.8.19"
anyhow = "1.0.95"
thiserror = "2.0.11"
sysinfo = "0.33.1"
which = "7.0.1"
glob = "0.3.1"
rustix = { version = "0.38", features = ["process"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
clap = { version = "4.5.27", features = ["derive"] }
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = "0.30.0"
envctl-engine = { path = "crates/engine" }

# Build all three crates in release for a snappy GUI.
[profile.release]
opt-level = 2
