[package]
name = "envctl-agent-env"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
# pure-Rust gzip (miniz_oxide via rust_backend) + pure-Rust tar; NO C zlib/zlib-ng.
flate2 = { workspace = true }
tar = { workspace = true }
# Inherits the workspace pin (default-features=false, rustls-tls→ring). The crate adds the
# `blocking` client feature only — keeping the single ring-only rustls discipline intact.
reqwest = { workspace = true, features = ["blocking"] }

[dev-dependencies]
serde_yaml = { workspace = true }
