[package]
name = "envctl-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "envctl_engine"
path = "src/lib.rs"

[dependencies]
# The pure-Rust agent-env provisioning core (kasetto absorption, Epic C). No C in the trust
# boundary: gzip via miniz_oxide, tar pure-Rust, reqwest→rustls→ring. The ONLY new dep.
envctl-agent-env = { path = "../agent-env" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = { workspace = true }
which = { workspace = true }
chrono = { workspace = true }
glob = { workspace = true }
rustix = { workspace = true }
