[package]
name = "envctl-secretd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "envctl_secretd"
path = "src/lib.rs"

[[bin]]
name = "secretd"
path = "src/main.rs"

[features]
# Build the daemon with the Cognitum Seed USB possession factor. Forwards to the engine feature;
# the USB keyslot (init + unlock) is then backed by the Seed's deterministic Ed25519 signature.
# Off by default — a stock secretd has no USB backend and refuses USB enrollment cleanly.
seed-factor = ["envctl-secrets-engine/seed-factor"]

[dependencies]
envctl-secrets-engine = { workspace = true }
envctl-secrets-proto = { workspace = true }
# OI-1 (a) / Phase 1: the durable libSQL `remote` store, runtime-selected via config (see config.rs).
# secretd is the ONLY shipping binary that links the libSQL stack; the engine/proto/cli never do.
envctl-secrets-store-libsql = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }   # frozen upstream root store (FS-S7)
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Type=notify readiness: send READY=1 after the UDS is bound (the crash-loop fix) and STOPPING=1 on
# graceful shutdown. Pure-Rust, no-op when $NOTIFY_SOCKET is unset (safe in tests).
sd-notify = { workspace = true }
rustix = { workspace = true }
clap = { workspace = true }
# conv.rs: serde_json reads the audit detail JSON; chrono parses RFC3339 policy expiries; zeroize
# wraps the inbound secret value + passphrase. All workspace-pinned — no NEW workspace dep.
serde_json = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
# config.rs: parse the optional secretd.toml (store-backend selection). serde derive + toml parser.
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# the e2e test (tests/e2e.rs) constructs the engine DIRECTLY (with a fake USB seam so Mint can pass
# its USB gate) and connects a tonic Channel over the tempdir UDS via the tower service_fn connector.
envctl-secrets-engine = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
# the test impls the engine's `Upstream` trait, whose `send` is declared with #[async_trait].
async-trait = { workspace = true }
