[package]
name = "envctl-secretd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "envctl_secretd"
path = "src/lib.rs"

[[bin]]
name = "secretd"
path = "src/main.rs"

[features]
default = ["mitm-ca"]
# Build the daemon with the Cognitum Seed USB possession factor. Forwards to the engine feature;
# the USB keyslot (init + unlock) is then backed by the Seed's deterministic Ed25519 signature.
# Off by default — a stock secretd has no USB backend and refuses USB enrollment cleanly.
seed-factor = ["envctl-secrets-engine/seed-factor"]
# PR-3b: the HTTPS_PROXY/CONNECT MITM data plane. Forwards the engine's `mitm-ca` (local CA + leaf
# issuance) and gates the proxy's TLS-termination ingress. Default-on; a `--no-default-features`
# secretd build drops the MITM code and the CONNECT branch falls back to the existing 501.
mitm-ca = ["envctl-secrets-engine/mitm-ca", "dep:tokio-rustls"]

[dependencies]
envctl-secrets-engine = { workspace = true }
envctl-secrets-proto = { workspace = true }
# OI-1 (a) / Phase 1: the durable libSQL `remote` store, runtime-selected via config (see config.rs).
# secretd is the ONLY shipping binary that links the libSQL stack; the engine/proto/cli never do.
envctl-secrets-store-libsql = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
# PR-3b MITM ingress: terminate the child's TLS with an engine-minted per-host leaf. ring-only
# (default-features=false in the workspace pin) so it tracks the single pinned rustls 0.23 and never
# pulls aws-lc-rs (no-c). OPTIONAL: only the `mitm-ca` feature links it.
tokio-rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true }   # frozen upstream root store (FS-S7)
# proxy.rs impls the engine's `Upstream` trait, declared with #[async_trait]. Already in the resolved
# workspace graph (the engine depends on it); promoting it to a normal dep adds NO new crate to the
# lockfile and is pure-Rust proc-macro (no C / no rustls — the no-c gate is unaffected).
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Type=notify readiness: send READY=1 after the UDS is bound (the crash-loop fix) and STOPPING=1 on
# graceful shutdown. Pure-Rust, no-op when $NOTIFY_SOCKET is unset (safe in tests).
sd-notify = { workspace = true }
rustix = { workspace = true }
clap = { workspace = true }
# conv.rs: serde_json reads the audit detail JSON; chrono parses RFC3339 policy expiries; zeroize
# wraps the inbound secret value + passphrase. All workspace-pinned — no NEW workspace dep.
serde_json = { workspace = true }
chrono = { workspace = true }
zeroize = { workspace = true }
# config.rs: parse the optional secretd.toml (store-backend selection). serde derive + toml parser.
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
# the e2e test (tests/e2e.rs) constructs the engine DIRECTLY (with a fake USB seam so Mint can pass
# its USB gate) and connects a tonic Channel over the tempdir UDS via the tower service_fn connector.
envctl-secrets-engine = { workspace = true }
zeroize = { workspace = true }
chrono = { workspace = true }
# the test impls the engine's `Upstream` trait, whose `send` is declared with #[async_trait].
async-trait = { workspace = true }
# mitm_e2e.rs: a rustls client trusting ONLY the engine's CA, terminating against the MITM leaf.
# ring-only (workspace pin), same single rustls 0.23 — no aws-lc-rs, no-c stays green.
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-pemfile = { workspace = true }
