[package]
name = "envctl-secrets-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "envctl_secrets"
path = "src/lib.rs"

[features]
default = ["inmem-store", "mitm-ca"]   # default store is inmem until OI-1 is ruled (no C dep ships)
inmem-store = []                       # RAM-only vault for tests/CI (envctl DryRunRunner analogue)
mitm-ca = ["dep:rcgen", "dep:x509-parser", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types"]
provider-github = []
provider-openai = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
rustix = { workspace = true }
# crypto (pure-Rust, no C/SQLCipher)
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
# tls/ca — OPTIONAL, only under mitm-ca (a CA-less engine build drops TLS entirely)
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
# the one async seam
async-trait = { workspace = true }

[dev-dependencies]
# Pure-Rust executor to drive the single async method (`relay_swap`) from sync integration tests via
# `block_on`. NO runtime in [dependencies]; tokio stays banned from the engine crate.
futures-executor = "0.3"
