[package]
name = "envctl-secrets-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "envctl_secrets"
path = "src/lib.rs"

[features]
default = ["inmem-store", "mitm-ca"]   # default store is inmem until OI-1 is ruled (no C dep ships)
inmem-store = []                       # RAM-only vault for tests/CI (envctl DryRunRunner analogue)
mitm-ca = ["dep:rcgen", "dep:x509-parser", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:time"]
provider-github = ["dep:rsa", "dep:base64"]   # RS256 App-JWT → installation token (src/mint_github.rs)
provider-openai = []
seed-factor = ["dep:ring", "dep:rustls", "dep:rustls-pemfile", "dep:rustls-pki-types"]   # Cognitum Seed USB possession factor (opt-in). Direct pure-Rust HTTPS to the Seed's REST custody API, TLS validated against the PINNED Cognitum CA (ring-only rustls — already in the resolved graph, so no-C gate stays green) + ring Ed25519 verify for Profile S. No `ssh`/subprocess (systemd-sandbox-safe). See PLAN-cognitum-seed-envctl-vault-factor.md

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
which = { workspace = true }
rustix = { workspace = true }
# crypto (pure-Rust, no C/SQLCipher)
chacha20poly1305 = { workspace = true }
argon2 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
# tls/ca — OPTIONAL, only under mitm-ca (a CA-less engine build drops TLS entirely)
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }
rustls-pki-types = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
# Sub-day (hours-granular) cert validity windows for mitm-ca leaves. Pure-Rust, no C; already in the
# resolved graph transitively (via x509-parser's asn1-rs). default-features=false drops std/macros.
time = { version = "0.3", optional = true, default-features = false }
# GitHub App-JWT mint (provider-github) — pure-Rust RustCrypto; no C in the trust boundary
rsa = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
# Cognitum Seed (seed-factor) — Ed25519 challenge verification for Profile S. ring is the sanctioned
# verifier (same crate rustls already pins on); already in the resolved graph, so no-C stays green.
ring = { version = "0.17", optional = true }
# the one async seam
async-trait = { workspace = true }

[dev-dependencies]
# Pure-Rust executor to drive the single async method (`relay_swap`) from sync integration tests via
# `block_on`. NO runtime in [dependencies]; tokio stays banned from the engine crate.
futures-executor = "0.3"
