[package]
name = "envctl-secrets-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
include = ["src/**", "proto/**", "build.rs"]   # self-contained: drops in verbatim on merge (OI-15)

[lib]
name = "envctl_secrets_proto"
path = "src/lib.rs"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }   # codegen
protox = "0.7"                        # pure-Rust protobuf compiler — no system `protoc` needed
